News UAT/force-app/main/default/objects/Lesson_Learned__c/Lesson_Learned__c.object-meta.xml
<CustomObject>
    <label>Lesson Learned</label>
    <nameField>
        <displayFormat>LL-{000000}</displayFormat>
        <label>Lessons Learned Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lessons Learned</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>