News UAT/force-app/main/default/objects/Lesson_Learned__c/fields/Action_Items_Status_Comments__c.field-meta.xml
<CustomField>
    <fullName>Action_Items_Status_Comments__c</fullName>
    <description>Long text area status fields to support comments, next steps, etc.  to help track this item  to close</description>
    <inlineHelpText>Long text area status field to support comments, next steps, etc. to help track this item  to close</inlineHelpText>
    <label>Action Items/Status Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>