News UAT/force-app/main/default/objects/Lesson_Learned__c/fields/Assigned_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the resource responsible for execution and management of this item to close</description>
    <inlineHelpText>Name of the resource responsible for execution and management of this item to close</inlineHelpText>
    <label>Assigned To Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Lessons Learned (Assigned To Name)</relationshipLabel>
    <relationshipName>Lessons_Learned1</relationshipName>
    <type>Lookup</type>
</CustomField>