News UAT/force-app/main/default/objects/Lesson_Learned__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Used to classify or group this item</description>
    <inlineHelpText>Used to classify or group this item</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Release Process Change</fullName>
            </value>
            <value>
                <fullName>Test Case Add/Update/Del</fullName>
            </value>
            <value>
                <fullName>Release Task Candidate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>