News UAT/force-app/main/default/objects/Lesson_Learned__c/fields/Completed_before_in_Release_Number__c.field-meta.xml
<CustomField>
    <fullName>Completed_before_in_Release_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the release in which this item was resolved</description>
    <inlineHelpText>Identifies the release in which this item was resolved</inlineHelpText>
    <label>Completed before/in Release Number</label>
    <referenceTo>Release_DO_NOT_USE__c</referenceTo>
    <relationshipLabel>Lessons Learned (Completed before/in Release Number)</relationshipLabel>
    <relationshipName>Lessons_Learned1</relationshipName>
    <type>Lookup</type>
</CustomField>