News UAT/force-app/main/default/objects/Lesson_Learned__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Long text area field that outlines the detailed description of the lesson learned. Includes any initial thoughts on how to tackle this item</description>
    <inlineHelpText>Long text area field that outlines the detailed description of the lesson learned. Includes any initial thoughts on how to tackle this item</inlineHelpText>
    <label>Details</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>