News UAT/force-app/main/default/objects/Lesson_Learned__c/fields/Level_of_Effort__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Effort__c</fullName>
    <description>Amount of effort required to implement this item</description>
    <inlineHelpText>Amount of effort required to implement this item</inlineHelpText>
    <label>Level of Effort</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Very High</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>