News UAT/force-app/main/default/objects/Lesson_Learned__c/fields/Originating_Release_Number__c.field-meta.xml
<CustomField>
    <fullName>Originating_Release_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Release in which this item was captured</description>
    <inlineHelpText>Release in which this item was captured</inlineHelpText>
    <label>Originating Release Number</label>
    <referenceTo>Release_DO_NOT_USE__c</referenceTo>
    <relationshipLabel>Lessons Learned</relationshipLabel>
    <relationshipName>Lessons_Learned</relationshipName>
    <type>Lookup</type>
</CustomField>