News UAT/force-app/main/default/objects/Lesson_Learned__c/fields/Publish_to_Business__c.field-meta.xml
<CustomField>
    <fullName>Publish_to_Business__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if this item should be reviewed with business partners</description>
    <inlineHelpText>Flag to indicate if this item should be reviewed with business partners</inlineHelpText>
    <label>Publish to Business?</label>
    <type>Checkbox</type>
</CustomField>