News UAT/force-app/main/default/objects/Lesson_Learned__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <description>Long text area field that outlines the detailed resolution of this item</description>
    <inlineHelpText>Long text area field that outlines the detailed resolution of this item</inlineHelpText>
    <label>Resolution</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>