News UAT/force-app/main/default/objects/Lesson_Learned__c/fields/Source_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the resource who identified this item</description>
    <inlineHelpText>Name of the resource who identified this item</inlineHelpText>
    <label>Source Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Lessons Learned</relationshipLabel>
    <relationshipName>Lessons_Learned</relationshipName>
    <type>Lookup</type>
</CustomField>