News UAT/force-app/main/default/objects/Lesson_Learned__c/fields/Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Date__c</fullName>
    <description>Current goal date for resolution of this item</description>
    <inlineHelpText>Current goal date for resolution of this item</inlineHelpText>
    <label>Target Date</label>
    <type>Date</type>
</CustomField>