News UAT/force-app/main/default/objects/Lesson_Learned__c/validationRules/Resolution_Req_Status_Completed_Canceled.validationRule-meta.xml
<ValidationRule>
    <fullName>Resolution_Req_Status_Completed_Canceled</fullName>
    <active>true</active>
    <description>Resolution is Required if Status Equals Completed or Canceled</description>
    <errorConditionFormula>AND (OR (ISPICKVAL(Status__c, &quot;Completed&quot;),
ISPICKVAL(Status__c, &quot;Canceled&quot;)),
ISBLANK(Resolution__c))</errorConditionFormula>
    <errorDisplayField>Resolution__c</errorDisplayField>
    <errorMessage>Resolution is Required if Status Equals &quot;Completed&quot; or &quot;Canceled&quot;</errorMessage>
</ValidationRule>